<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjtu.fbi.dropdetect.MainActivity">

    <TextView
        android:id="@+id/tv_connect_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="连接蓝牙2.0"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/tv_ble_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/disconnected"/>

    <TextView
        android:id="@+id/tv_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/is_scan"
        android:textColor="@color/colorPrimary"
        />

    <RelativeLayout
        android:id="@+id/out_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:id="@+id/out_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_acc"
                />
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_out"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/out_data_layout"
            android:layout_centerHorizontal="true"
            >

        </com.github.mikephil.charting.charts.LineChart>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/in_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/out_layout"
        >

        <LinearLayout
            android:id="@+id/in_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inner_acc"
                />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_in"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/in_data_layout"
            android:layout_centerHorizontal="true"
            >

        </com.github.mikephil.charting.charts.LineChart>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_layout"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/status_now"
            />

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/status_still"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/still"
                />

            <TextView
                android:id="@+id/status_move"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/move"
                />

            <TextView
                android:id="@+id/status_drop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/drop"
                />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rb_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_data"
                />

            <RadioButton
                android:id="@+id/rb_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/in_data"
                />
        </RadioGroup>
    </RelativeLayout>

</RelativeLayout>
